--- a/index.html
+++ b/index.html
@@ -8,5 +8,19 @@
   <title></title>
 </head>
 <body>
+  <div class="container">
+    <div class="row">
+      <div class="col-6">
+        <form>
+          <input  class="form-control" type="text">
+          <button class="btn btn-dark" type="submit">Submit</button>
+        </form>
+      </div>
+      <div class="col-6" id="output">
+
+
+      </div>
+    </div>
+  </div>
 </body>
 </html>
