--- a/index.html
+++ b/index.html
@@ -12,12 +12,20 @@
     <div class="row">
       <div class="col-6">
         <form>
-          <input  class="form-control" type="text">
+          <label for="name">Task</label>
+          <input id="name"  class="form-control" type="text">
           <button class="btn btn-dark" type="submit">Submit</button>
         </form>
       </div>
       <div class="col-6" id="output">
 
+      <template class="list-template">
+        <div class="custom-control custom-checkbox">
+          <input type="checkbox" class="custom-control-input" id="customCheck1">
+          <label class="custom-control-label" for="customCheck1 customCheck2"><span>Sample text</span></label>
+          <button class="btn btn-dark" type="button">delete</button>
+        </div>
+      </template>
 
       </div>
     </div>
